# personal-planner

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  Makefile  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: agent.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: chat.py  todos.py
backend/tests/: conftest.py  test_todos.py
documentation/: IMPLEMENTATION.md
frontend/: Makefile  package.json
frontend/src/app/: layout.tsx
frontend/src/app/todos/: page.tsx
frontend/src/components/: Chat.tsx  ChatMessage.tsx  SuggestionCard.tsx  TodoList.tsx
frontend/src/hooks/: useChat.ts
frontend/src/lib/: api.ts  theme.ts  utils.ts
parabolic/: .env.local.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
parabolic/convex/: agent.test.ts  agent.ts  chat.ts  embeddings.ts  http.ts  schema.ts  todos.ts
parabolic/convex/lib/: datemath.test.ts  datemath.ts  embeddings.test.ts  embeddings.ts  ollama.ts  todoSort.test.ts  todoSort.ts
parabolic/src/app/: layout.tsx  page.tsx
parabolic/src/app/todos/: page.tsx
parabolic/src/components/: Chat.tsx  ChatMessage.tsx  Providers.tsx  SuggestionCard.tsx  TaskSidebar.tsx  TodoList.tsx
parabolic/src/hooks/: useChat.ts
parabolic/src/lib/: convex.ts  parseSSE.test.ts  parseSSE.ts  theme.ts
